--- a/src/App.css
+++ b/src/App.css
@@ -1,11 +1,23 @@
-.App {
+body{
+  width: 100vw;
+  text-align: center;
+  margin: auto;
+}
+
+.fullName{
+color: brown;
+}
+
+img {
+  width: 30%;
+  height: 30%;
+  border-radius: 50%;
+}
+
+.bio{
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
 
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
@@ -13,16 +25,7 @@
   }
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
+
 
 .App-link {
   color: #61dafb;
